# AiGenetics

./: DX12_RENDERING_PIPELINE_REWRITE_SUMMARY.md  PLAN.md  tables.txt
.qoder/plans/: 3D_Genetics_Game_Architecture_71142152.md
.qoder/repowiki/en/content/: Breeding and Mutation Systems.md  Getting Started.md  Troubleshooting and FAQ.md  Visualization and Rendering.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  Core Genetics API.md  Neural Systems API.md  Organism Systems API.md  Procedural Generation API.md  Utility Systems API.md
.qoder/repowiki/en/content/Core Genetic System/: Chromosome Implementation.md  Core Genetic System.md  Gene Expression and Regulation.md  GeneticsCore Configuration.md  Genome Structure and Organization.md  Mutation System Architecture.md
.qoder/repowiki/en/content/Examples and Tutorials/: Advanced Evolutionary Studies.md  Basic Genetics Experiments.md  Examples and Tutorials.md  Getting Started Tutorial.md  Neural Network Customization.md  Procedural Generation Modifications.md  Visualization and Integration Guide.md
.qoder/repowiki/en/content/Neural Network System/: Activity-Based Synapse Builder.md  Connection Management.md  DynamicNeuralNetwork.md  Neural Learning System.md  Neural Network System.md  Neuron Growth Controller.md  Neuron System.md
.qoder/repowiki/en/content/Organism Classification Systems/: Arthropoda System.md  Chordata System.md  Mollusca System.md  Organism Classification Systems.md
.qoder/repowiki/en/content/Procedural Generation System/: Mesh Procedural Generator.md  Movement Procedural Generator.md  Procedural Generation System.md  Synchronized Generator.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
GeneticsGame/: GeneticsGame.csproj  Program.cs
GeneticsGame/Core/: Chromosome.cs  Gene.cs  GeneticsCore.cs  Genome.cs  MutationSystem.cs
GeneticsGame/Phyla/Arthropoda/: ArthropodaCreature.cs  ArthropodaGenome.cs
GeneticsGame/Phyla/Chordata/: ChordataCreature.cs  ChordataGenome.cs  ChordataNeuronGrowth.cs
GeneticsGame/Phyla/Mollusca/: MolluscaCreature.cs
GeneticsGame/Procedural/: SynchronizedGenerator.cs
GeneticsGame/Procedural/Mesh/: MeshProceduralGenerator.cs
GeneticsGame/Procedural/Movement/: MovementProceduralGenerator.cs
GeneticsGame/Systems/: ActivityBasedSynapseBuilder.cs  BreedingSystem.cs  Connection.cs  DynamicNeuralNetwork.cs  MutationNeuron.cs  NeuralLearningSystem.cs  Neuron.cs  NeuronGrowthController.cs  VisualizationSystem.cs
GeneticsGameEngine/: CMakeLists.txt  CMakeLists.txt.minimal  GITCOMMANDS  GeneticsGameEngine.sln  README.md  RUN_ME_FIRST.md  build.bat  build.ps1  run.bat
GeneticsGameEngine/build_minimal/: CMakeCache.txt
GeneticsGameEngine/docs/: MSVC_Runtime_Library_Reference.md
GeneticsGameEngine/src/: CMakeLists.txt
GeneticsGameEngine/src/core/: CMakeLists.txt  Window.cpp  Window.h  dx12_test.h  main.cpp
GeneticsGameEngine/src/engine/: CMakeLists.txt
GeneticsGameEngine/src/engine/genetics/: CMakeLists.txt
GeneticsGameEngine/src/engine/genetics/breeding/: BreedingSystem.cpp  BreedingSystem.h  CMakeLists.txt  MutationEngine.cpp  MutationEngine.h
GeneticsGameEngine/src/engine/genetics/expression/: CMakeLists.txt  ExpressionRules.h  GeneticExpression.cpp  GeneticExpression.h
GeneticsGameEngine/src/engine/genetics/genome/: CMakeLists.txt  Chromosome.h  Gene.h  Genome.h
GeneticsGameEngine/src/engine/genetics/taxonomy/: Animal.h  Arthropoda.h  CMakeLists.txt  Chordata.h  Mollusca.h  Organism.h
GeneticsGameEngine/src/engine/procedural/: CMakeLists.txt  UPDATE_PROGRESS.txt
GeneticsGameEngine/src/engine/procedural/generation/: CreatureParams.h  GeneticMapper.cpp  GeneticMapper.h  ScalarFieldGenerator.cpp  ScalarFieldGenerator.h
GeneticsGameEngine/src/engine/procedural/mesh/: MarchingCubes.cpp  MarchingCubes.h  MeshOptimizer.cpp  MeshOptimizer.h  ProceduralMeshRenderer.cpp  ProceduralMeshRenderer.h
GeneticsGameEngine/src/engine/procedural/voxel/: VoxelGrid.cpp  VoxelGrid.h  VoxelLODManager.h
GeneticsGameEngine/src/engine/rendering/camera/: CameraController.h  CameraSystem.h  CameraTypes.h  CinematicCameraController.h  FirstPersonCameraController.h  OrbitCameraController.h
GeneticsGameEngine/src/engine/rendering/culling/: BoundingVolume.h  FrustumCuller.h  SpatialPartition.h
GeneticsGameEngine/src/engine/rendering/lod/: LODLevel.h  LODManager.h  LODTransition.h
GeneticsGameEngine/src/engine/rendering/projection/: ProjectionMatrix.h  ProjectionModes.h
GeneticsGameEngine/src/genetics/: CMakeLists.txt  GeneticsIntegration.cpp  GeneticsIntegration.h
GeneticsGameEngine/src/graphics/: CMakeLists.txt  GraphicsEngine.cpp  GraphicsEngine.h  pixel.hlsl  vertex.hlsl  vertex_simple.hlsl
GeneticsGameEngine/src/shaders/: MarchingCubesCS.hlsl
